style.css
/* ... */
.blockbody table {
    background: var(--bg-body);
}

.blockbody table td,
.blockbody table tr,
.blockbody table th {
    border: 2px solid var(--bg-heading);
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
*             The navigation bar, and all its blocks             *
* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
nav {
    background: var(--bg-nav);
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 0;
    left: 0;
    width: var(--left-nav-width);
}

nav .blockbody {
    background: var(--bg-nav) !important;
}

nav section h3 {
    background: var(--bg-heading);
    color: var(--text-heading);
    margin: 0;
    padding: 0.5rem 0.25rem;
}

nav section h3:first-of-type {
    margin: 0;
    margin-bottom: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    box-shadow: none;
}

nav section > .blockbody {
    text-align: center;
    margin: 0;
    border: none;
}

nav input {
    width: 100%;
}

nav select {
    width: 100%;
    padding: 0;
}


.more:after {
    content: " >>>";
}

.tag_count:before {
    content: "(";
}
.tag_count:after {
    content: ")";
}

#paginator .blockbody {
    background: none;
    border: none;
    box-shadow: none;
}


/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
*                     specific page types                        *
* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

#short-wiki-description > .blockbody {
    padding-bottom: 15px;
}
#short-wiki-description h2 {
    margin: 0 0 0.4em;
}

#pagelist {
    margin-top: 32px;
}

#image-list .blockbody {
    margin: 0;
}

.shm-image-list {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    justify-content: center;
}

.shm-image-list .thumb,
.thumb {
    width: 226px;
    display: inline-block;
    zoom: 1; /* ie6 */
    display: inline; /* ie6 */
    text-align: center;
    margin: 1rem 0;
}
.thumb IMG {
    background: var(--bg-body);
    border-radius: 12px; /* standard, webkit, opera */
    -moz-border-radius: 12px; /* mozilla haven't committed yet */
    box-shadow: 2px 2px 6px rgba(0,0,0,0.6); /* standard, opera */
    -webkit-box-shadow: 2px 2px 6px rgba(0,0,0,0.6); /* webkit haven't committed yet */
    -moz-box-shadow: 2px 2px 6px rgba(0,0,0,0.6); /* mozilla haven't committed yet */
}

.thumb IMG[title ~= "meta:animated"] {
  border: blue;
  border-style: solid;
  border-width: 0.25em;
}

.thumb img:hover {
    transform: scale(1.15);
}

/* --------------- */
/* Tag edit cloud  */
/* --------------- */
#tageditcloud {
  line-height: 2.7rem;
}

#tageditcloud span.tag-category > span {
    padding: 0.25rem 0.5rem;
    border-radius: 0.25rem;
    color: var(--text-heading);
    background: var(--bg-heading);
}

#tageditcloud span.tag-category span.tag-selected {
    background: black;
    color: var(--text-heading);
    border: none;
}

/* ----------------------- */
/* Article formatting      */
/* ----------------------- */
ARTICLE {
    text-align: center;
    /* height: 1%; */
}

body > article {
    background: var(--bg-body);
    margin: 0;
    margin-left: var(--main-left-offset);
    height: fit-content;
    padding: 0 2rem;
    text-align: center;
}

article > section > h3 {
    background: var(--bg-body);
    /* color: var(--text-heading); */
    color: var(--text-body);
    box-shadow: none;
    padding: 0;
    font-size: 2.25rem;
}

article > section {
  margin-bottom: 1.5rem;
}

article .setupblock {
    background: var(--bg-body);
}

table.form.image_info {
  border-collapse: collapse;
  width: 80%;
  max-width: 1200px;
  margin: auto;
}

table.form.image_info td,th {
  border-collapse: collapse;
  border: 1px solid black;
  padding: 0.25rem;
}

table.form.image_info td:nth-of-type(2) {
  display: none;
}

table.form.image_info tr:last-of-type td {
  border: none;
}

/* ----------------------- */
/* Comment formatting      */
/* ----------------------- */
#comment-list-image {
  width: 80%;
  max-width: 1200px;
  margin: auto;
}

/* ----------------------- */
/* Link to Post formatting */
/* ----------------------- */
#Link_to_Postmain > .blockbody {
    padding: 0;
}

#Link_to_Postmain > .blockbody > table > tbody > tr {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

#Link_to_Postmain tr,
#Link_to_Postmain td {
    border: none;
}

#Link_to_Postmain table {
    padding: 1rem;
    margin: 0;
    width: 100%;
}

/* ----------------------- */
/* Header formatting       */
/* ----------------------- */
header {
    color: var(--text-heading);
    background: var(--bg-heading);
    position: relative;
    margin-bottom: 1rem;
    margin-left: calc(var(--main-left-offset));
}

header > h1 {
    color: var(--text-heading);
    background: var(--bg-heading);
    box-shadow: none;
    overflow: hidden;
    border: none;
}

header > h1:hover {
    max-height: fit-content;
}
/* ... */

